# discogs-api

./: Cargo.toml
src/: err.rs  lib.rs  parsed_response.rs  requester.rs
src/client/: auth.rs  builder.rs  client.rs  mod.rs  params.rs
src/data_types/: artist.rs  artist_releases.rs  fallible.rs  image.rs  label.rs  master.rs  master_versions.rs  mod.rs  named_resource.rs  pagination.rs  rating.rs  release.rs  release_rating_by_user.rs  release_stats.rs  sorting.rs  track.rs  video.rs
src/endpoints/: artist.rs  artist_releases.rs  community_rating.rs  label.rs  master.rs  master_versions.rs  mod.rs  release.rs  release_rating_by_user.rs  release_stats.rs
