[package]
name = "discogs-api"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/Breadinator/ytmdl"
description = "WIP api wrapper for Discogs"
license-file = "LICENSE"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

